<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.loadtest</groupId>
    <artifactId>gatling-api-project</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <gatling.version>3.13.5</gatling.version>
        <gatling-maven-plugin.version>4.8.0</gatling-maven-plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.gatling.highcharts</groupId>
            <artifactId>gatling-charts-highcharts</artifactId>
            <version>${gatling.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
        <plugin>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-maven-plugin</artifactId>
                <version>4.9.0</version> 
                <configuration>
                    <simulationClass>simulations.LoadSimulation</simulationClass>
                    <propagateSystemProperties>false</propagateSystemProperties>
                    
                    <jvmArgs>
                        <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
                        <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
                    </jvmArgs>
                </configuration>
            </plugin>    
        </plugins>
    </build>
</project>